# llm_chat_pdf

./: .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  llm_chat_pdf.code-workspace  pyproject.toml
api/: .gitignore  pyproject.toml
api/src/app/: main.py
api/src/app/api/: api.py
api/src/app/api/endpoints/: __init__.py  chat.py  document.py  file.py
api/src/app/chat/: chat.py  schemas.py
api/src/app/core/: settings.py
frontend/: pyproject.toml
frontend/src/app/: main.py
